fixed spacing

--- a/Meet The Team/Meet The Team.css
+++ b/Meet The Team/Meet The Team.css
@@ -218,7 +218,7 @@ body{
  }
 
  .trueSamuel{
-    top:300px;
+    top: 275px;
     left: 375px;
     position: relative;
  }
@@ -237,7 +237,7 @@ body{
  }
 
 .trueDarshan{
-    top:400px;
+    top:375px;
     left: 375px;
     position: relative;
 }
@@ -256,7 +256,7 @@ body{
  }
 
 .trueKristen{
-    top:500px;
+    top:475px;
     left: 375px;
     position: relative;
 }
@@ -275,7 +275,7 @@ body{
  }
 
 .trueAndre{
-    top:610px;
+    top:585px;
     left: 375px;
     position: relative;
 }
@@ -295,7 +295,7 @@ body{
  }
 
 .trueNodshley{
-    top:710px;
+    top:685px;
     left: 375px;
     position: relative;
 }
